static/main.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    background-color: #b00cf1;
}

h1 {
    margin-bottom: 0.625rem;
}

.btn:hover {
    background-color: #b00cf1;
    transition: background-color 0.5s ease;
}

.error {
    color:crimson;
}

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1.25rem;
}

.navbar img {
    width: 2rem;
    height: 2rem;
}

.navbar .nav-links {
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
    gap: 1.25rem;
}

.navbar .nav-links li a {
    color: black;
    text-decoration: none;
    padding: 0.625rem 1rem;
    font-size: 1rem;
    font-weight: bold;
}

.navbar .nav-links li a:hover {
    background: mediumaquamarine;
    border-radius: 0.375rem;
}

.messages {
    display: flex;
    justify-content: center;
}

.success {
    color: mediumaquamarine;
}

.sem-registro {
    display: flex;
    justify-content: center;
}

.sem-registro p {
    color: coral;
}

.form-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    align-content: center;
    justify-content: center;
    margin-top: 1.25rem;
}

.form-container form {
    display: flex;
    flex-direction: column;
    background-color: mediumaquamarine;
    border-radius: 0.375rem;
    padding: 2.5rem;
    box-shadow: 0.625rem 0.625rem 2.5rem rgba(0, 0, 0, 0.4);
    gap: 0.375rem
}

.form-container .form-group {
    display: flex;
    flex-direction: column;
    margin-bottom: 1.25rem;
}

.form-container .form-group label {
    text-align: center;
}

.form-container input {
    margin-top: 0.625rem;
    padding: 1rem;
    border-radius: 0.375rem;
    font-weight: bolder;
    background-color:coral;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.form-container .form-group .opcoes-jogo select {
    width: 100%;
    padding: 0.625rem;
    margin: 0.625rem 0 0.625rem 0;
    border-radius: 0.375rem;
    box-shadow: 0.625rem 0.625rem 1.875rem rgba(0, 0, 0, 0.4);
    text-align: center;
    color:black;
    background-color:coral;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.container-resultado-jogo {
    display: flex;
    flex-direction: column;
    align-items: center;
    align-content: center;
    justify-content: center;
    margin-top: 1.25rem;
}

.container-resultado-jogo .resumo-jogo {
    display: flex;
    flex-direction: column;
    background-color: coral;
    border-radius: 0.375rem;
    padding: 2.5rem;
    box-shadow: 0.625rem 0.625rem 2.5rem rgba(0, 0, 0, 0.4);
    gap: 0.375rem
}

.container-resultado-jogo .resumo-jogo p {
    text-align: center;
}

.container-resultado-jogo .resumo-jogo p span.vitoria {
    color: white;
}

.container-resultado-jogo .resumo-jogo p span.empate {
    color: gray;
}

.container-resultado-jogo .resumo-jogo p span.derrota {
    color: crimson;
}

.opcoes-extras-conta {
    display: flex;
    flex-direction: column;
    align-items: center;
    align-content: center;
    justify-content: center;
    margin-top: 1.25rem;
}

.opcoes-extras-conta a {
    margin-top: 1.25rem;
    padding: 0.625rem;
    border-radius: 0.375rem;
    background-color: coral;
    text-decoration: none;
    color: black;
}

.opcoes-extras-conta a:hover {
    background-color: mediumaquamarine;
    transition: background-color 0.3s ease;
}


.container-tabela {
    display: flex;
    flex-direction: column;
    align-items: center;
    align-content: center;
    justify-content: center;
    margin-top: 1.25rem;
}

.tabela-historico-jogos, .tabela-historico-login {
    border-collapse: collapse;
    align-items: center;
}

.tabela-historico-jogos {
    width: 80%;
}

.tabela-historico-login {
    width: 50%;
}
  
td, th {
    border: 1px solid black;
    text-align: center;
    padding: 0.5rem;
}

tr:nth-child(odd) {
    background-color: coral;
}

tr:nth-child(even) {
    background-color: mediumaquamarine;
}

th.data-jogo, th.escolha-usuario, th.escolha-computador, th.resultado-jogo {
    width: 25%;
}

th.data-login, th.hora-login {
    width: 50%;
}

.pagination {
    display: flex;
    align-items: center;
    justify-content: center;
}

.pagination a, footer a {
    text-decoration: none;
    color: white;
}

.pagination a:hover, footer a:hover {
    color: mediumaquamarine;
}


footer {
    display: flex;
    position: fixed;
    align-items: center;
    justify-content: center;
    bottom: 0;
    width: 100%;
}

